--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: rgb(194, 194, 70);
+}
+
+.bg-yellow {
+  background-color: rgb(194, 194, 70);
+}
+
+.text-yellow {
+  color: rgb(194, 194, 70);
+}
+
+.container-shadow {
+  box-shadow: 8px 8px;
 }
